--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -30,7 +30,7 @@ steps:
   args:
     [
       "deploy", "releases", "create", "rel-${SHORT_SHA}",
-      "--delivery-pipeline", "kpt-tech",
+      "--delivery-pipeline", "python",
       "--region", "us-central1",
       "--annotations", "commitId=${REVISION_ID}",
       "--images", "python-deployment=us-central1-docker.pkg.dev/adroit-nimbus-370411/tech/kpt-image:${COMMIT_SHA}"
