--- a/clouddeploy.yaml
+++ b/clouddeploy.yaml
@@ -2,7 +2,7 @@
 apiVersion: deploy.cloud.google.com/v1beta1
 kind: DeliveryPipeline
 metadata:
-  name: python
+  name: tech-kpt
 description: Testing for cloud-deploy  
 serialPipeline:
   stages:
@@ -13,7 +13,7 @@ apiVersion: deploy.cloud.google.com/v1beta1
 kind: Target
 metadata:
   name: production
-description: Python Production Environment
+description: Production Environment deployment
 gke:
   cluster: projects/adroit-nimbus-370411/locations/us-central1/clusters/tech-kpt    
   
